# mindgraph

./: .gitignore  README.md  main.py  pyproject.toml  readme.md  schema.json  test_app.py
app/: __init__.py  integration_manager.py  models.py  signals.py  views.py
app/integrations/: add_multiple_conditional.py  ai_search.py  auto_add_person.py  auto_tag_person.py  conditional_entity_addition.py  conditional_relationship_addition.py  latent_input.py  natural_input.py  readme.md  search_integration.py  url_array_processor.py  url_input.py
app/integrations/database/: __init__.py  base.py  falkordb.py  memory.py  nebulagraph.py  neo4j.py  nexus.py
app/templates/: index.html
static/: script.js  style.css
