[tool.poetry]
name = "mindgraph"
version = "0.1.0"
description = "proof of concept prototype for generating and querying against an ever-expanding knowledge graph with ai"
authors = ["Yohei Nakajima <me@yoheinakajima.com>"]

packages = [
    { include = "app", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
flask = "^3.0.0"
app = "^0.0.1"
pytorch-forecasting = "^1.0.0"
blinker = "^1.7.0"
openai = "^0.28.1"
typeid-python = "^0.2.2"
python-dotenv = "^1.0.1"
nexus-python = "^0.2.0"
beautifulsoup4 = "^4.9.3"
nebula3-python = "^3.5.0"
falkordb = "^1.0.3"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"